# MedHive-AI

./: .editorconfig  .env.example  .gitignore  README.md  biome.json  docker-compose.dev.yml  docker-compose.prod.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/fastapi/: Dockerfile  alembic.ini  conftest.py  main.py  pyproject.toml  worker.py
apps/fastapi/alembic/: README.md  env.py
apps/fastapi/alembic/versions/: m1_extension.py  m2_tables.py  m3_hnsw_indexes.py  m4_rls_and_roles.py  m5_audit_grants.py
apps/fastapi/core/: config.py  constants.py  errors.py  logging.py
apps/fastapi/db/: redis_client.py  session.py
apps/fastapi/routers/: auth.py  health.py  profiles.py
apps/fastapi/schemas/: common.py  profile.py  researcher_profile.py
apps/fastapi/services/: audit.py  auth.py  embedding.py  extractor.py  llm_gateway.py  parser.py  profile_ingest.py
apps/fastapi/tests/: test_embedding.py  test_health_and_auth.py  test_llm_gateway.py
apps/nextjs/: .env.local.example  Dockerfile  middleware.ts  next.config.js  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
apps/nextjs/app/: globals.css  layout.tsx  page.tsx
apps/nextjs/app/(app)/: layout.tsx
apps/nextjs/app/(app)/home/: page.tsx
apps/nextjs/app/(public)/login/: page.tsx
apps/nextjs/app/(public)/register/: page.tsx
apps/nextjs/app/(public)/reset-password/: page.tsx
apps/nextjs/components/: nav.tsx  providers.tsx
apps/nextjs/hooks/: use-me.ts
apps/nextjs/lib/: api-client.ts  env.ts  error-to-message.ts  nav-registry.tsx
apps/nextjs/lib/supabase/: client.ts  server.ts
apps/nextjs/public/: .gitkeep
data/: grants_seed.json
docs/: ADR.md  annotation-rubric.md  quota-check.md  schema.md
scripts/: download_models.sh  healthcheck.sh  validate_quotas.py
